[package]
name = "otel-rs"
version = "0.1.0"
edition = "2024"
description = "Modern OpenTelemetry observability helpers for Rust"
authors = ["Ade M Ramdani <qcynaut@gmail.com>"]
repository = "https://github.com/qcynaut/otel-rs"
homepage = "https://github.com/qcynaut/otel-rs"
license = "MIT OR Apache-2.0"
keywords = ["opentelemetry", "tracing", "observability", "otlp", "metrics"]
categories = ["development-tools::debugging", "development-tools::profiling"]
rust-version = "1.85"

[features]
default = ["tracing", "logs", "metrics", "grpc"]
tracing = ["opentelemetry-otlp/trace"]
logs = ["opentelemetry-otlp/logs"]
metrics = ["opentelemetry-otlp/metrics"]
grpc = [
    "opentelemetry-otlp/grpc-tonic",
    "opentelemetry-otlp/tonic",
    "opentelemetry-otlp/tls-roots",
    "dep:tonic",
]
http = [
    "opentelemetry-otlp/http-proto",
    "opentelemetry-otlp/reqwest-rustls",
    "opentelemetry-otlp/tls-roots",
]

[dependencies]
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = { version = "0.31.1", features = [
    "experimental_use_tracing_span_context",
] }
opentelemetry-otlp = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
data-encoding = "2"
thiserror = "2"
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tonic = { version = "0.14", features = ["tls-ring", "tls-webpki-roots"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
